# sopel-8ball

./: .coveragerc  .gitignore  .pylintrc  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pypi.yml
sopel_8ball/: __init__.py  choices.py  config.py  managers.py  plugin.py
tests/: test_choices.py  test_integration.py  test_managers.py
