[build-system]
requires = ["setuptools~=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_8ball", "sopel_8ball.*"]
namespaces = false

[project]
name = "sopel-8ball"
version = "0.4.1"
description = "Magic 8 ball plugin for Sopel"
keywords = [
  "sopel",
  "plugin",
  "height-ball",
  "bot",
  "irc",
]
maintainers = [
  { name="Florian Strzelecki", email="florian.strzelecki@gmail.com" },
]
authors = [
  { name="dgw", email="dgw@technobabbl.es" },
  { name="Florian Strzelecki", email="florian.strzelecki@gmail.com" },
]

readme = "README.rst"
license = { text="EFL-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Eiffel Forum License (EFL)",
    "License :: OSI Approved :: Eiffel Forum License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
requires-python = ">=3.6, <4"
dependencies = [
    "sopel>=7.1",
]

[project.urls]
"Homepage" = "https://github.com/Exirel/sopel-8ball"
"Bug Tracker" = "https://github.com/Exirel/sopel-8ball/issues"

[project.entry-points."sopel.plugins"]
8ball = "sopel_8ball.plugin"

[project.entry-points."sopel_8ball.choices"]
classic = "sopel_8ball.choices:Classic"
snarky = "sopel_8ball.choices:Snarky"
spooky = "sopel_8ball.choices:Spooky"
weeaball = "sopel_8ball.choices:Weeaball"
