[metadata]
name = sopel-8ball
version = 0.1.1
description = Magic 8 ball plugin for Sopel
keywords = sopel plugin height-ball bot irc
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Florian Strzelecki
author_email = florian.strzelecki@gmail.com
url = https://github.com/Exirel/sopel-8ball
license = Eiffel Forum License, version 2
license_file = LICENSE.txt
platforms = Linux x86, x86-64
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
python_requires = >=3.6, <4
packages = find:
zip_safe = false
install_requires =
    sopel>=7.1,<8

[options.packages.find]
exclude =
    sopel
    sopel.*

[options.entry_points]
sopel.plugins =
    8ball = sopel_8ball.plugin
sopel_8ball.choices =
    classic = sopel_8ball.choices:Classic
    snarky = sopel_8ball.choices:Snarky

[flake8]
max-line-length = 79
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[coverage:run]
branch = True
source = sopel_8ball

[isort]
line_length = 79
known_third_party = sopel
known_first_party = sopel_8ball
